# game-theory-agent-workbench

./: .env.example  .gitignore  README.md  STREAMLIT_APP.md  agent_config.yaml  environment.local.yml  environment.yml  pyproject.toml  requirements.txt  streamlit_app.py
agent/: __init__.py
agent/llm/: __init__.py  adapters.py  client.py  config.py  conversation.py  diagnostics.py
agent/parser/: __init__.py  _doc_utils.py  document_loader.py  output_format.py  parser.py  prompts.py
agent/phase1/: __init__.py  runner.py  wolfram.py
agent/phase1/mechanisms/: __init__.py  information_fee.py
agent/schemas/: __init__.py  model_spec.py
examples/responsible_sourcing_demo/: modelspec_final.json  modelspec_final.yaml  stage1_final.json  stage2_final.json
examples/responsible_sourcing_demo/paper/: demo_model.md
examples/responsible_sourcing_demo/phase1_wolfram/: README.md  all_results.json  manifest.json  mechanism_summaries.json  phase1_diagnostics.json  phase1_report.md  run_all.wl  run_summary.json
examples/responsible_sourcing_demo/phase1_wolfram/run_logs/: base_case.stdout.txt  high_consumer_premium.stdout.txt  (+4 more)
notebooks/: phase0_workflow.py  phase1_wolfram_workflow.py  stage1_review_workflow.py  stage2_review_workflow.py
scripts/: build_demo_project.py
tests/: __init__.py  test_document_loader.py  test_generalization_benchmarks.py  test_llm_smoke.py  test_parser_smoke.py  test_pdf.py  test_phase1_runner.py  test_phase1_wolfram.py  test_prompt_local.py  test_real_paper.py
tests/manual_mma_test/: cournot_result.json  cournot_test.wl  parse_result.py
(+12 files in other folders)
